Enhance project structure and documentation
- Update .gitignore to exclude IDE-specific files, logs, build artifacts, and Docker-related files.
- Add contributing guidelines and license information to README.md.
- Include known issues section in README.md for better user guidance.
- Improve accessibility by adding ARIA roles to Loading and NotFound components.
- Update layout to specify language attribute in HTML tag.
- Add ESLint and Prettier configuration files for code quality.
- Introduce Husky for pre-commit linting and add lint-staged configuration.
- Set strict TypeScript options for better type safety.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,23 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE-specific files
+.idea/
+.vscode/
+*.swp
+
+# Logs
+logs
+*.log
+
+# Build artifacts
+dist/
+*.cache
+
+# Coverage reports
+coverage/
+
+# Remove Docker-related files
+docker-compose.yml
+Dockerfile
