--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "nextjs-builder-localized-starter",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/your-username/nextjs-builder-localized-starter",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@builder.io/dev-tools": "^1.3.3",
@@ -23,6 +25,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "typescript": "^5",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": ["eslint --fix", "prettier --write"],
+    "*.css": ["prettier --write"]
   }
 }
