--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "start": "next start"
   },
   "dependencies": {
     "@builder.io/dev-tools": "^1.3.3",
@@ -25,12 +23,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.0"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx}": ["eslint --fix", "prettier --write"],
-    "*.css": ["prettier --write"]
+    "typescript": "^5"
   }
 }
